--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!--
+    Name- Jremy Gumbura 
+    Student# 101011389  
+    Date- 05-09-2025 
+    Descriptiom- FOR INFT webdevelopment#-->
+    
     <title>Document</title>
 </head>
 <body>
-    <h1> INFT 1206-07 HEADER </h1>
-    
+    <img src="./img/images.png" alt="My logo">
+    <h1> INFT 1206-07 Web Development </h1>
+    <a href="./week1/example1.html"> Week 1 intro to HTML </a>
+    <p> welcome to my <em>website</em> for INFT 1206 Course<a href = https://durhamcollege.ca/ target="_blank">@durhame College</a></p>
+    <p> @ 2025 Gumbura
+    </p>
 </body>
 </html>
