adding the comments
i added the html comments

--- a/assignment1/assignment.html
+++ b/assignment1/assignment.html
@@ -8,5 +8,12 @@
 </head>
 <body>
     
+    <!--
+    Name- Jeremy Gumbura
+	File: assigment.html
+	Date: 19 May 2025
+	this file is for my first assignment that involves creating a letter.
+    -->
+
 </body>
 </html>
