styles and created sender column
i added the sender column and the semantic HTML and styling class

--- a/Assignment 1/myletter.html
+++ b/Assignment 1/myletter.html
@@ -11,7 +11,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name=" author" content="Jeremy Gumbura">
     <title>Letter to PhD student concerning their application to the university</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    
+    <address class="sender-column">
+        <p>Dr. Eleanor Gaye</p>
+        <p>Science faculty</p>
+        <p>University of Awesome</p>
+        <p>Bobtown, CA 99999,</p>
+        <p>USAp</p>
+        <p>Tel: 123-456-7890p</p>
+        <p>Email: no_reply@example.com</p>
+        <p>20 January 2016p</p>
+    </address>
 </body>
