recipient column and RE
i added the recipient column and and the RE in the bold font

--- a/Assignment 1/myletter.html
+++ b/Assignment 1/myletter.html
@@ -12,6 +12,7 @@
     <meta name=" author" content="Jeremy Gumbura">
     <title>Letter to PhD student concerning their application to the university</title>
     <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
     <address class="sender-column">
@@ -19,9 +20,18 @@
         <p>Science faculty</p>
         <p>University of Awesome</p>
         <p>Bobtown, CA 99999,</p>
-        <p>USAp</p>
+        <p>USA</p>
         <p>Tel: 123-456-7890p</p>
         <p>Email: no_reply@example.com</p>
         <p>20 January 2016p</p>
     </address>
+        <address class="recipient-column">
+        <p>Miss Eileen Dover</p>
+        <p>4321 Cliff Top Edge</p>
+        <p>Dover, CT9 XXX</p>
+        <p>UK</p>
+    </address>
+
+<p><strong>Re: Eileen Dover university application</strong></p>
+
 </body>
