building basic menu
i added a header with the page title, logo and navigation

--- a/Assignment 1/index.html
+++ b/Assignment 1/index.html
@@ -22,10 +22,16 @@
 
   <body>
 
+    <header>
+
+    <div class="logo">
+
       <h1>Birdwatching</h1>
       <img src="dove.png" alt="a simple dove logo">
 
+    </div>
 
+    <nav>
       <ul>
         <li><span>Home</span></li>
         <li><a href="#">Get started</a></li>
@@ -33,7 +39,7 @@
         <li><a href="#">Gear</a></li>
         <li><a href="#">Forum</a></li>
       </ul>
-
+    </nav>
 
       <h2>Welcome</h2>
 
