corrected the style.css

--- a/index.html
+++ b/index.html
@@ -12,8 +12,23 @@
     <title>Document</title>
 </head>
 <body>
+    <header>
     <img src="./img/images.png" alt="My logo">
     <h1> INFT 1206-07 Web Development </h1>
+
+
+        <nav>
+            <u>
+                <li><a href="./index.html"></a></li>
+                <li><a href="./week1/example1.html"></a></li>
+                <li><a href="">Week 2</a></li>
+                <li><a href="">Week 3</a></li>
+            </u>
+        </nav>
+    </header>
+    <p> This <em>website</em> is for <strong></strong> inft1206
+    course at <a href="https://durhamcollege.ca/"
+    target="_blank">Durham College</a></p>
     <a href="./week1/example1.html"> Week 1 intro to HTML </a>
     <p> welcome to my <em>website</em> for INFT 1206 Course<a href = https://durhamcollege.ca/ target="_blank">@durhame College</a></p>
     <p> @ 2025 Gumbura
