--- a/Assignment 1/myletter.html
+++ b/Assignment 1/myletter.html
@@ -11,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name=" author" content="Jeremy Gumbura">
     <title>Letter to PhD student concerning their application to the university</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles1.css">
 
 </head>
 <body>
@@ -43,7 +43,8 @@
   <h2>Starting dates</h2>
 
   <p>We are happy to accommodate you starting your study with us at any time, however it would 
-    suit us better if you could start at the beginning of a semester; the start dates for each one are as follows:</p>
+    suit us better if you could start at the beginning of a semester; the start 
+    dates for each one are as follows:</p>
 
   <ul>
     <li>First semester: 9 September 2016</li>
@@ -57,15 +58,22 @@
 
   <h2>Subjects of study</h2>
 
-  <p>At the Awesome Science Faculty, we have a pretty open-minded research facility — as long as the subjects fall somewhere in the realm of science and technology. You seem like an intelligent, dedicated researcher, and just the kind of person we'd like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, in order of priority:</p>
+  <p>At the Awesome Science Faculty, we have a pretty open-minded research facility — as 
+    long as the subjects fall somewhere in the realm of science and technology. 
+    You seem like an intelligent, dedicated researcher, and just the kind of person we'd 
+    like to have on our team. Saying that, of the ideas you submitted we were most intrigued by are as follows, 
+    in order of priority:</p>
 
   <ol>
     <li>Turning H<sub>2</sub>O into wine, and the health benefits of Resveratrol (C<sub>14</sub>H<sub>12</sub>O<sub>3</sub>.)</li>
-    <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially increases (effect of 3 × 10<sup>3</sup> increasing to 3 × 10<sup>4</sup>.)</li>
-    <li><abbr title="HyperText Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr> constructs for representing musical scores.</li>
+    <li>Measuring the effect on performance of funk bassplayers at temperatures exceeding 30°C (86°F), when the audience size exponentially 
+    increases (effect of 3 × 10<sup>3</sup> increasing to 3 × 10<sup>4</sup>.)</li>
+    <li><abbr title="HyperText Markup Language">HTML</abbr> and <abbr title="Cascading Style Sheets">CSS</abbr> 
+    constructs for representing musical scores.</li>
   </ol>
 
-  <p>So please can you provide more information on each of these subjects, including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.</p>
+  <p>So please can you provide more information on each of these subjects, 
+    including how long you'd expect the research to take, required staff and other resources, and anything else you think we'd need to know? Thanks.</p>
 
   <h2>Exotic dance moves</h2>
 
@@ -89,8 +97,5 @@
   <p>Dr Eleanor Gaye</p>
 
   <p><strong>University of Awesome motto:</strong> “Be awesome to each other.” -- <em>The memoirs of Bill S Preston, Esq</em></p>
-
-
-
 
 </body>
