--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -106,12 +106,16 @@
       <h1>Mozilla</h1>
       <!-- insert <img> element, link to the small
           version of the Firefox logo -->
+          <img src="./firefox_logo-only_RGB.png" alt="Firefox logo">
 
     </header>
 
     <main>
       <article>
         <!-- insert iframe from youtube -->
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/ojcNcvb1olg?si=dPhvY-yoZIXyGvp_" title="YouTube video player" frameborder="0" 
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" frameborder="0"></iframe>
 
         <h2>Rocking the free web</h2>
 
