--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -127,16 +127,16 @@
       <div class="further-info">
         <!-- insert images with srcsets and sizes -->
         <a href="https://www.mozilla.org/en-US/firefox/new/">
-          <img>
-        </a>
-        <a href="https://www.mozilla.org/">
-          <img>
+          <img src="firefox_logo-only_RGB.png" alt="Firefox Browser logo">
+        </a> 
+        <a href="https://www.mozilla.org/en-US/firefox/new/">
+          <img src="mozilla-dinosaur-head.png" alt="Mozilla Dinosaur logo">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img>
+          <img src="./firefox-addons (1).jpg" alt="Add-ons logo">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
-          <img>
+          <img src="mdn.svg" alt="MDN Web Docs logo">
         </a>
         <div class="clearfix"></div>
       </div>
