added the final picture
 i added the picture of the red panda and changed the sizing

--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -143,6 +143,10 @@
 
       <div class="red-panda">
         <!-- insert picture element -->
+         <picture>
+          <source media="(min-width: 800px)" srcset="red-panda.jpg">
+          <img src="red-panda.jpg" alt="Red panda">
+        </picture>
       </div>
 
     </main>
