--- a/Assignment 2/index.html
+++ b/Assignment 2/index.html
@@ -113,9 +113,14 @@
     <main>
       <article>
         <!-- insert iframe from youtube -->
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/ojcNcvb1olg?si=dPhvY-yoZIXyGvp_" title="YouTube video player" frameborder="0" 
-        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
-        referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>" frameborder="0"></iframe>
+        <iframe width="560" height="315"
+        src="https://www.youtube.com/embed/ojcNcvb1olg?si=dPhvY-yoZIXyGvp_"
+        title="YouTube video player"
+        style="border: none;"
+        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+        referrerpolicy="strict-origin-when-cross-origin"
+        allowfullscreen>
+        </iframe>
 
         <h2>Rocking the free web</h2>
 
@@ -133,7 +138,7 @@
           <img src="mozilla-dinosaur-head.png" alt="Mozilla Dinosaur logo">
         </a>
         <a href="https://addons.mozilla.org/">
-          <img src="./firefox-addons (1).jpg" alt="Add-ons logo">
+          <img src="firefox-addons.jpg" alt="Add-ons logo">
         </a>
         <a href="https://developer.mozilla.org/en-US/">
           <img src="mdn.svg" alt="MDN Web Docs logo">
