--- a/Assignment 2/part2Table.html
+++ b/Assignment 2/part2Table.html
@@ -1,3 +1,10 @@
+<!--
+  Name: Jeremy Gumbura
+  File: part2table.html
+  Date: 5 June 2025
+  Description: creating a web page that displays the planets.
+-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
