--- a/Assignment 2/part2Table.html
+++ b/Assignment 2/part2Table.html
@@ -10,8 +10,8 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
-    <title>Table template</title>
-    <link href="minimal-table.css" rel="stylesheet" type="text/css">
+    <title>Planets data</title>
+    <link href="./part2.css" rel="stylesheet">
   </head>
   <body>
     <h1>Table template</h1>
