--- a/week 5/Assignment 3/JaneDoe.html
+++ b/week 5/Assignment 3/JaneDoe.html
@@ -11,7 +11,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jane Doe</title>
-    <linlk rel="stylesheet" href="Janedoe.css">
+    <link rel="stylesheet" href="Janedoe.css">
 </head>
 <body>
     <h1>Jane Doe</h1>
