--- a/Assignment 3/JaneDoe.html
+++ b/Assignment 3/JaneDoe.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="Janedoe.css">
 </head>
 <body>
-    <h1>Jane Doe</h1>
+    <h1>Jeremy Gumbura</h1>
 <div class="job-title">Web Developer</div>
 <p>
   Far far away, behind the word mountains, far from the countries Vokalia and
