adding the comments
added the html comments required at the top of my file

--- a/Assignment 3/coolbox.html
+++ b/Assignment 3/coolbox.html
@@ -1,3 +1,10 @@
+<!--
+  Name: Jeremy Gumbura
+  File: JaneDoe.html
+  Date: 17 June 2025
+  Description: a story about Jane Doe.
+-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
