--- a/Assignment 3/coolbox.html
+++ b/Assignment 3/coolbox.html
@@ -11,7 +11,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>Cool box</title>
-    <!-- your css link goes here -->
+    <link rel="stylesheet" href="coolbox.css" />
+    
   </head>
   <body>
     <div>This is a cool box</div>
