--- a/Assignment 3/coolbox.html
+++ b/Assignment 3/coolbox.html
@@ -1,8 +1,8 @@
 <!--
   Name: Jeremy Gumbura
-  File: JaneDoe.html
+  File: coolbox.html
   Date: 17 June 2025
-  Description: a story about Jane Doe.
+  Description: creating a cool box with HTML and CSS.
 -->
 
 <!DOCTYPE html>
@@ -12,9 +12,11 @@
     <meta name="viewport" content="width=device-width" />
     <title>Cool box</title>
     <link rel="stylesheet" href="coolbox.css" />
-    
+
   </head>
   <body>
-    <div>This is a cool box</div>
+     <div class="cool-box">
+      <span class="text-box">This is a cool box</span>
+    </div>
   </body>
 </html>
