--- a/Assignment 3/college.html
+++ b/Assignment 3/college.html
@@ -1,3 +1,10 @@
+<!--
+  Name: Jeremy Gumbura
+  File: colleg.html
+  Date: 18 June 2025
+  Description: A college website for St Huxley's Community College.
+-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
