--- a/Assignment 3/mywebsite.html
+++ b/Assignment 3/mywebsite.html
@@ -1,10 +1,10 @@
 <!--
   Name: Jeremy Gumbura
-  File: college.html
+  File: mywebsite.html
   Date: 18 June 2025
-  Description: A college website for St Huxley's Community College.
+  Description: A simple website layout with a header, navigation, main content area, and an aside section.
 -->
-  
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
