added the required html comments
added the the comments that are required at the top of html files

--- a/Assignment 4/image_gallery.html
+++ b/Assignment 4/image_gallery.html
@@ -1,3 +1,10 @@
+<!--
+  Name: Jeremy Gumbura
+  File: image_gallery.html
+  Date: 29 July 2025
+  Description: using javascript to power an image gallery
+-->
+
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
