--- a/Assignment 4/image_gallery.html
+++ b/Assignment 4/image_gallery.html
@@ -12,7 +12,7 @@
 
     <title>Image gallery</title>
 
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="image_gallery.css">
     
   </head>
 
@@ -20,7 +20,7 @@
     <h1>Image gallery example</h1>
 
     <div class="full-img">
-      <img class="displayed-img" src="images/pic1.jpg" alt="Closeup of a human eye">
+      <img class="displayed-img" src="pic1.jpg" alt="Closeup of a human eye">
       <div class="overlay"></div>
       <button class="dark">Darken</button>
     </div>
