--- a/Assignment 4/part2_bouncing_balls.html
+++ b/Assignment 4/part2_bouncing_balls.html
@@ -1,3 +1,10 @@
+  <!--
+  Name: Jeremy Gumbura
+  File: bouncing_balls.html
+  Date: 31 July 2025
+  Description: this is a bouncing balls animation
+-->
+
 <!DOCTYPE html>
 <html lang="en-US">
   <head>
