changing file names
changed file names to implement them to my html file

--- a/Assignment 4/part2_bouncing_balls.html
+++ b/Assignment 4/part2_bouncing_balls.html
@@ -11,13 +11,13 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width">
     <title>Bouncing balls</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="part2_balls.css">
   </head>
 
   <body>
     <h1>bouncing balls</h1>
     <canvas></canvas>
 
-    <script src="main-finished.js"></script>
+    <script src="part2_balls.js"></script>
   </body>
 </html>
