added the comment clock
added the necessary comments at the top of my HTML file

--- a/Assignment 5/index.html
+++ b/Assignment 5/index.html
@@ -1,3 +1,10 @@
+  <!--
+  Name: Jeremy Gumbura
+  File: index.html
+  Date: 7 August 2025
+  Description: this file is to practice accessibility 
+-->
+
 <!DOCTYPE html>
 <html>
   <head>
